Initial idea for making includes 'static' (pre-processed instead of dynamic)

--- a/examples/ansible.cfg
+++ b/examples/ansible.cfg
@@ -54,6 +54,13 @@
 # enable additional callbacks
 #callback_whitelist = timer, mail
 
+# Determine whether includes in tasks and handlers are "static" by
+# default. As of 2.0, includes are dynamic by default. Setting these
+# values to True will make includes behave more like they did in the
+# 1.x versions.
+#task_includes_static = True
+#handler_includes_static = True
+
 # change this for alternative sudo implementations
 #sudo_exe = sudo
 
